more complex currentTimeInLocationAt test with gradle task for statically mocking java.time